| Summary: | ASTERISK-16799: Callee declined when 'beep' audio file does not exist | ||
| Reporter: | IAMJames_ (monkesys) | Labels: | |
| Date Opened: | 2010-10-12 18:53:36 | Date Closed: | 2021-02-26 09:35:52.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_page |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Assuming this is not the intended behavior, The 'Callee' of a page will receive a SIP DECLINE upon issuing the Page command when the 'beep' audio file does not exist. ****** ADDITIONAL INFORMATION ****** <--- SIP read from 192.168.100.209:5060 ---> INVITE sip:888@192.168.100.6 SIP/2.0 Via: SIP/2.0/UDP 192.168.100.209:5060;branch=z9hG4bK-14d6c57b From: "JE" <sip:JE@192.168.100.6>;tag=a567d3c38f3c4ff7o0 To: <sip:888@192.168.100.6> Call-ID: d03108b3-6c31fc7@192.168.100.209 CSeq: 102 INVITE Max-Forwards: 70 Proxy-Authorization: Digest <removed> Contact: "JE" <sip:JE@192.168.100.209:5060> Expires: 240 User-Agent: Linksys/SPA942-6.1.5(a) Content-Length: 397 Allow: ACK, BYE, CANCEL, INFO, INVITE, NOTIFY, OPTIONS, REFER Supported: replaces Content-Type: application/sdp v=0 o=- 5727 5727 IN IP4 192.168.100.209 s=- c=IN IP4 192.168.100.209 t=0 0 m=audio 16452 RTP/AVP 0 2 4 8 18 96 97 98 101 a=rtpmap:0 PCMU/8000 a=rtpmap:2 G726-32/8000 a=rtpmap:4 G723/8000 a=rtpmap:8 PCMA/8000 a=rtpmap:18 G729a/8000 a=rtpmap:96 G726-40/8000 a=rtpmap:97 G726-24/8000 a=rtpmap:98 G726-16/8000 a=rtpmap:101 telephone-event/8000 a=fmtp:101 0-15 a=ptime:30 a=sendrecv <-------------> --- (15 headers 18 lines) --- Sending to 192.168.100.209 : 5060 (no NAT) Using INVITE request as basis request - d03108b3-6c31fc7@192.168.100.209 Found user 'JE' Found RTP audio format 0 Found RTP audio format 2 Found RTP audio format 4 Found RTP audio format 8 Found RTP audio format 18 Found RTP audio format 96 Found RTP audio format 97 Found RTP audio format 98 Found RTP audio format 101 Found audio description format PCMU for ID 0 Found audio description format G726-32 for ID 2 Found audio description format G723 for ID 4 Found audio description format PCMA for ID 8 Found audio description format G729a for ID 18 Found unknown media description format G726-40 for ID 96 Found unknown media description format G726-24 for ID 97 Found unknown media description format G726-16 for ID 98 Found audio description format telephone-event for ID 101 Capabilities: us - 0x4040e (gsm|ulaw|alaw|ilbc|h261), peer - audio=0x90d (g723|ulaw|alaw|g726|g729)/video=0x0 (nothing), combined - 0xc (ulaw|alaw) Non-codec capabilities (dtmf): us - 0x1 (telephone-event), peer - 0x1 (telephone-event), combined - 0x1 (telephone-event) Peer audio RTP is at port 192.168.100.209:16452 Looking for 888 in international (domain 192.168.100.6) list_route: hop: <sip:JE@192.168.100.209:5060> <--- Transmitting (no NAT) to 192.168.100.209:5060 ---> SIP/2.0 100 Trying Via: SIP/2.0/UDP 192.168.100.209:5060;branch=z9hG4bK-14d6c57b;received=192.168.100.209 From: "JE" <sip:JE@192.168.100.6>;tag=a567d3c38f3c4ff7o0 To: <sip:888@192.168.100.6> Call-ID: d03108b3-6c31fc7@192.168.100.209 CSeq: 102 INVITE User-Agent: Asterisk PBX Allow: INVITE, ACK, CANCEL, OPTIONS, BYE, REFER, SUBSCRIBE, NOTIFY, INFO Supported: replaces Contact: <sip:888@192.168.100.6> Content-Length: 0 <------------> -- Executing [888@international:1] NoOp("SIP/JE-00000dcd", "All staff page from 888") in new stack -- Executing [888@international:2] Page("SIP/JE-00000dcd", "local/test") in new stack -- Called test -- Executing [test@default:1] Answer("Local/test@default-1a25,2", "") in new stack -- Executing [test@default:2] Playback("Local/test@default-1a25,2", "vm-delete") in new stack -- <Local/test@default-1a25,2> Playing 'vm-delete' (language 'en') == Spawn extension (international, 888, 2) exited non-zero on 'SIP/JE-00000dcd' Scheduling destruction of SIP dialog 'd03108b3-6c31fc7@192.168.100.209' in 32000 ms (Method: INVITE) <--- Reliably Transmitting (no NAT) to 192.168.100.209:5060 ---> SIP/2.0 603 Declined Via: SIP/2.0/UDP 192.168.100.209:5060;branch=z9hG4bK-14d6c57b;received=192.168.100.209 From: "JE" <sip:JE@192.168.100.6>;tag=a567d3c38f3c4ff7o0 To: <sip:888@192.168.100.6>;tag=as672a5c25 Call-ID: d03108b3-6c31fc7@192.168.100.209 CSeq: 102 INVITE User-Agent: Asterisk PBX Allow: INVITE, ACK, CANCEL, OPTIONS, BYE, REFER, SUBSCRIBE, NOTIFY, INFO Supported: replaces Content-Length: 0 <------------> == Spawn extension (default, test, 2) exited non-zero on 'Local/test@default-1a25,2' <--- SIP read from 192.168.100.209:5060 ---> ACK sip:888@192.168.100.6 SIP/2.0 Via: SIP/2.0/UDP 192.168.100.209:5060;branch=z9hG4bK-14d6c57b From: "JE" <sip:JE@192.168.100.6>;tag=a567d3c38f3c4ff7o0 To: <sip:888@192.168.100.6>;tag=as672a5c25 Call-ID: d03108b3-6c31fc7@192.168.100.209 CSeq: 102 ACK Max-Forwards: 70 Proxy-Authorization: <removed> Contact: "JE" <sip:JE@192.168.100.209:5060> User-Agent: Linksys/SPA942-6.1.5(a) Content-Length: 0 | ||
| Comments: | By: Leif Madsen (lmadsen) 2010-10-13 12:49:52 The beep file is a core sound file, so you should really make sure that is installed, along with other core sound files, for proper operation of your Asterisk system. By: Friendly Automation (friendly-automation) 2021-02-26 09:35:53.917-0600 Change 15500 merged by George Joseph: app_page.c: Don't fail to Page if beep sound file is missing [https://gerrit.asterisk.org/c/asterisk/+/15500|https://gerrit.asterisk.org/c/asterisk/+/15500] By: Friendly Automation (friendly-automation) 2021-02-26 09:36:10.367-0600 Change 15522 merged by George Joseph: app_page.c: Don't fail to Page if beep sound file is missing [https://gerrit.asterisk.org/c/asterisk/+/15522|https://gerrit.asterisk.org/c/asterisk/+/15522] By: Friendly Automation (friendly-automation) 2021-02-26 09:36:32.599-0600 Change 15523 merged by George Joseph: app_page.c: Don't fail to Page if beep sound file is missing [https://gerrit.asterisk.org/c/asterisk/+/15523|https://gerrit.asterisk.org/c/asterisk/+/15523] | ||