app_page.c: Don't fail to Page if beep sound file is missing

ASTERISK-16799 #close

Change-Id: I40367b0d6dbf66a39721bde060c8b2d734a61cf4